--- a/main.tex
+++ b/main.tex
@@ -680,7 +680,7 @@ The pattern of decreasing ionisation potentials and $\Delta_{ST}$ with increasin
 energy is still followed, with the absolute error remaining consistent.
 However, differences in the triplet-singlet energies between the reference and pseudo-systems 
 become significant, notably for the largest case.
-Here again, ionisation energy and $\Epsilon_{HOMO}$ agree with mean average errors lower than
+Here again, ionisation energy and $\epsilon_{HOMO}$ agree with mean average errors lower than
 $10\%$ for PBE0.
 
 Unlike for the previous systems, the larger the system, the larger becomes the discrepancy between $\Delta_{ST}$
