--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % Modified for use with JCC - Madhusudan Singh Copyright (C) (2012). All rights reserved.
-\documentclass[aip,reprint]{revtex4-1}
-%\documentclass[aip]{revtex4-1}
+%\documentclass[aip,reprint]{revtex4-1}
+\documentclass[aip]{revtex4-1}
 
 \setlength{\oddsidemargin}{0in}  %left margin position, reference is one inch
 \setlength{\textwidth}{6.5in}    %width of text=8.5-1in-1in for margin
@@ -219,7 +219,7 @@ We make use of two kinds of gaussian pseudo-potentials \cite{me_structure_theory
 For a pseudo-carbon atom,
 the multi-centered pseudo-potential that we built reads as follows:
 \begin{align}
-\label{eq:ourPP}
+\label{eq:ourPP_init}
 \hat{W} =&
 \underbrace{\frac{1}{r} A\exp(-\alpha r^2)\sum_{m=-1}^{m=+1}\left|Y_{1,m}\right>\left<Y_{1,m}\right|}_{p \ \text{projector}}%
 +\\
